SOS-1862 fixes horizontal scroll

--- a/themes/so-theme/docroot/_diffs/css/color_schemes/normal/normal.css
+++ b/themes/so-theme/docroot/_diffs/css/color_schemes/normal/normal.css
@@ -495,7 +495,7 @@ a {
 		display: block;
 		float: right;
 		height: 52px;
-		margin: -0.75em -1.45em -0.85em 1em;
+		margin: -0.75em -1.4em -0.85em 1em;
 		overflow: visible;
 		width: 52px;
 
